# camber

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  MANIFEST.in  NOTICE  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
.sentrux/: rules.toml
camber/: __init__.py  ahu.py  boilercycle.py  bps.py  carbon.py  chiller.py  chillerstaging.py  chwplant.py  chwpump.py  cli.py  comfort.py  condenserwater.py  config.py  coolingtower.py  cost.py  demand.py  eval.py  fault_economics.py  fdd_g36.py  finance.py  g36_reset.py  iaq.py  inventory.py  io.py  leakvalve.py  lighting.py  loadprofile.py  mapping_confidence.py  oafraction.py  overcooling.py  overcooling_severity.py  plant.py  points.py  pv.py  rcx.py  realio.py  reheat.py  resolve.py  satreset.py  schedules.py  (+12 more)
camber/api/: __init__.py  read.py  server.py
camber/charts/: __init__.py  box_reheat.py  carpet.py  cusum_chart.py  energy_signature.py  scatter.py  timeseries.py  zones_chart.py
camber/ingest/: __init__.py  bacnet.py  base.py  csv_perpoint.py  csv_wide.py  haystack.py  modbus.py  mqtt_stream.py  opcua.py  quality.py  sql.py
camber/integrate/: __init__.py  tickets.py
camber/interop/: __init__.py  better.py  brick.py  export.py  openei.py  psychro.py  pvlib_bridge.py  site_model.py  tariff_nrel.py
camber/mandv/: __init__.py  caltrack.py  categorical.py  cusum.py  ecm_savings.py  intervalfit.py  models.py  nonroutine.py  normalized.py  resample.py  retrofit_isolation.py  stats.py  towt.py  weather.py
camber/model/: __init__.py  entities.py  mapping.py  roles.py
camber/report/: __init__.py  audit.py  fleet.py
camber/rules/: __init__.py  base.py  boiler_rule.py  boilercycle_rule.py  builtin.py  chiller_rule.py  chillerfleet_rule.py  chillerstaging_rule.py  chwplant_rule.py  chwpump_rule.py  condenserwater_rule.py  coolingtower_rule.py  hwplant_deltat_rule.py  hwpump_rule.py  iaq_rule.py  leakvalve_rule.py  oafraction_rule.py  overcooling_rule.py  overcooling_severity_rule.py  reheat_min_rule.py  reheat_rule.py  satreset_rule.py  setback_rule.py  simul_hc.py  static_rule.py  triage.py  zones_rule.py
camber/store/: __init__.py  bench.py  parquet_store.py
docs/: ARCHITECTURE.md  CAPABILITIES.md  ECOSYSTEM.md  INGEST-PROTOCOLS.md  MANDV.md  SCALE.md  SECURITY.md  VALIDATION.md
examples/: synthetic_demo.py
examples/bdg2/: README.md  fetch.py  run_mv.py
examples/lbnl_fdd/: README.md  benchmark.py  fetch.py  mapping.json  mapping_ddahu.json  mapping_fcu.json  run_brick.py  run_fdd.py
examples/soo/: README.md  ahu_sequence.json
tests/: test_ahu.py  test_api.py  test_better.py  test_boilercycle.py  test_bps.py  test_brick.py  test_caltrack.py  test_carbon.py  test_chiller.py  test_chillerfleet.py  test_chillerstaging.py  test_chwplant.py  test_chwpump.py  test_comfort.py  test_condenserwater.py  test_config.py  test_coolingtower.py  test_cost.py  test_cusum.py  test_demand.py  test_ecm_savings.py  test_entities.py  test_eval.py  test_export.py  test_fault_economics.py  test_fdd_g36.py  test_finance.py  test_fleet.py  test_g36_reset.py  test_haystack.py  test_hwplant_deltat.py  test_hwpump.py  test_iaq.py  test_ingest.py  test_ingest_protocols.py  test_integrate.py  test_leakvalve.py  test_lighting.py  test_loadprofile.py  test_mandv_categorical.py  (+50 more)
weather/tmy/: example_tmyx_cz15.epw
