[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "camber"
version = "0.1.0"
description = "Vendor-neutral building-automation-system trend analysis: FDD, M&V, and retro-commissioning"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "The CAMBER authors" }]
keywords = [
  "BAS", "HVAC", "FDD", "fault detection",
  "measurement and verification", "retro-commissioning",
  "ASHRAE", "energy", "EMIS",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=1.24,<2",
  "pandas>=2.0,<3",
  "matplotlib>=3.7",
  "pyarrow>=14",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
brick = ["rdflib>=6"]   # robust Brick/RDF parsing (camber.interop.brick backend="rdflib")
# a maintained Haystack client to wire via camber.ingest.haystack.client_transport;
# phable is modern but needs Python >= 3.11, pyhaystack covers older Pythons.
haystack = [
    "phable>=0.1.0; python_version >= '3.11'",
    "pyhaystack; python_version < '3.11'",
]

[project.scripts]
camber = "camber.cli:main"

[tool.setuptools.packages.find]
include = ["camber*"]
