[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "camber-toolkit"   # PyPI distribution name (the bare "camber" is squatted); imports as `camber`
version = "0.1.1"
description = "Vendor-neutral building-automation-system trend analysis: FDD, M&V, and retro-commissioning"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "The CAMBER authors" }]
keywords = [
  "BAS", "HVAC", "FDD", "fault detection",
  "measurement and verification", "retro-commissioning",
  "ASHRAE", "energy", "EMIS",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=1.24,<2",
  "pandas>=2.0,<3",
  "matplotlib>=3.7",
  "pyarrow>=14",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
brick = ["rdflib>=6"]   # robust Brick/RDF parsing (camber.interop.brick backend="rdflib")
# a maintained Haystack client to wire via camber.ingest.haystack.client_transport;
# phable is modern but needs Python >= 3.11, pyhaystack covers older Pythons.
haystack = [
    "phable>=0.1.0; python_version >= '3.11'",
    "pyhaystack; python_version < '3.11'",
]
# full-fidelity URDB tariff billing via NREL PySAM's UtilityRate5 (BSD-3-Clause; large
# binary wheel). The native camber.tariff engine needs none of this; the bridge in
# camber.interop.tariff_nrel uses it for exotic rates / cross-checking.
tariff = ["nrel-pysam>=4"]
# LBNL BETTER analytical engine, to cross-validate CAMBER's change-point M&V and reach
# BETTER's benchmarking/targeting (modified BSD + U.S. DOE clauses). camber.interop.better
# imports it lazily; the core needs none of it.
better = ["better-lbnl-os"]
# Exact ASHRAE-formulation psychrometrics (dew point, humidity ratio, enthalpy) and a
# cross-check for CAMBER's dependency-free Stull wet-bulb. MIT. camber.interop.psychro
# imports it lazily; the core needs none of it.
psychro = ["psychrolib>=2"]
# Reference open-source PV modeling: irradiance transposition (GHI/DNI/DHI -> plane-of-array)
# and temperature-aware PVWatts yield, beyond camber.pv's flat-PR monitoring. BSD-3.
# camber.interop.pvlib_bridge imports it lazily; the core needs none of it.
pv = ["pvlib>=0.10"]
# Read-only network ingest adapters (camber.ingest.*). Each imports its protocol library
# lazily and never issues a write/command service. See docs/INGEST-PROTOCOLS.md + SECURITY.md.
# Modbus TCP register polling (pymodbus, BSD-3-Clause).
modbus = ["pymodbus>=3"]
# MQTT / Sparkplug streaming telemetry (paho-mqtt; depend under its EDL-1.0 / BSD-style option).
mqtt = ["paho-mqtt>=1.6"]
# BACnet property / Trend-Log reads incl. experimental BACnet/SC (bacpypes3, MIT). SC needs an
# operational certificate + hub URI; prefer a historian/gateway for production BACnet.
bacnet = ["bacpypes3>=0.0.98"]
# OPC-UA value/history reads (asyncua / opcua-asyncio). NOTE: asyncua is LGPL-3.0 -- kept as an
# optional, dynamically-imported dependency only (never vendored/bundled). camber.ingest.opcua
# imports it lazily; the core needs none of it.
opcua = ["asyncua>=1.0"]

[project.scripts]
camber = "camber.cli:main"

[tool.setuptools.packages.find]
include = ["camber*"]
